add to render()

--- a/app/src/index.html
+++ b/app/src/index.html
@@ -11,6 +11,8 @@
 
     <script src="../assets/js/main.js" defer></script>
 
+    <link rel="shortcut icon" href="../assets/img/crow.svg" type="image/x-icon" />
+
 </head>
 
 <body>
